# djangodoc-bot

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yaml
src/: lib.rs
