[package]
name = "djangodocbot"
version = "0.1.0"
authors = ["obayemi <obayemi@ikjpz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "rustls-tls"] }
tokio = { version = "0.2", features = ["full"] }
clap = {version = "~2.27.0", features = ["yaml"]}
scraper = {version = "0.12" }

dotenv = { version = "0.15.0", optional = true }
serenity = { git = "https://github.com/acdenisSK/serenity", branch = "await_next", optional = true }
# serenity = { version = "0.8.6", optional = true}
log = { version = "0.4.8", optional = true }
env_logger = { version = "0.7.1", optional = true }

[features]
bot = ["dotenv", "serenity", "log", "env_logger"]


[[bin]]
name = "bot"    
required-features = ["bot"]
